--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="logo.ico" />
+    <link rel="canonical" href="https://www.alyssameczkowska.com/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Personal website of Alyssa Meczkowska,a Computer Science student at St. John's University, showcasing research, projects, and tutoring experience."
     />
+    <meta property="og:title" content="Alyssa Meczkowska – Computer Science Portfolio" />
+    <meta property="og:description" content="Explore Alyssa's research, technical projects, and academic achievements in computer science." />
+    <meta property="og:url" content="https://www.alyssameczkowska.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Alyssa Meczkowska" />
     <!--
     
       manifest.json provides metadata used when your web app is installed on a
